fix the width of steps images in creamed eggs recipe

--- a/recipes/creamed_eggs.html
+++ b/recipes/creamed_eggs.html
@@ -22,15 +22,15 @@
     </ul>
     <h3>Steps :</h3>
     <ol>
-        <li>Gather the ingredients.<br><img src="../imgs/eggs_step1.webp"></li>
+        <li>Gather the ingredients.<br><img src="../imgs/eggs_step1.webp" style="max-width: 100%"></li>
         <li>Place eggs in a saucepan and cover with cold water. Bring water to a boil and immediately
             remove from heat. Cover and let eggs stand in hot water for 10 to 12 minutes. Remove from hot water, cool,
-            peel and chop. <br><img src="../imgs/eggs_step2.webp" alt=""></li>
+            peel and chop. <br><img src="../imgs/eggs_step2.webp" style="max-width: 100%"></li>
         <li>Melt butter in a saucepan over medium heat; stir in flour until smooth. Gradually mix in milk
             so that no lumps form and stir constantly until mixture comes to a boil.<br><img
-                src="../imgs/eggs_step3.webp" alt=""></li>
+                src="../imgs/eggs_step3.webp" style="max-width: 100%"></li>
         <li>Stir white pepper, salt, black pepper, and chopped eggs into the sauce; stir until eggs are
-            heated through.<br><img src="../imgs/eggs_step4.webp" alt=""></li>
+            heated through.<br><img src="../imgs/eggs_step4.webp" style="max-width: 100%"></li>
     </ol>
 </body>
 </html>
